--- a/skeleton/.travis.yml
+++ b/skeleton/.travis.yml
@@ -26,6 +26,8 @@ matrix:
   - rvm: 2.1.0
     env: PUPPET_VERSION="~> 3.2.0" STRICT_VARIABLES=yes
   - rvm: 2.1.0
+    env: PUPPET_VERSION="~> 3.2.0"
+  - rvm: 2.1.0
     env: PUPPET_VERSION="~> 3.3.0" STRICT_VARIABLES=yes
   - rvm: 2.1.0
     env: PUPPET_VERSION="~> 3.4.0" STRICT_VARIABLES=yes
